# Boxworld

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  启动-开发模式.bat  启动-浏览器版.bat  破限.txt  苹果改1.61.json
.clinerules/: boxworld项目概览.md
public/builtin-assets/: README.md  manifest.json
scripts/: build-asset-manifest.mjs  crawl-avatars.mjs  download-avatars.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Avatar.tsx  AvatarPickerDialog.tsx  CharacterStickerSlots.tsx  ErrorBoundary.tsx  GroupMemberPicker.tsx  ImageCropper.tsx  ImageLightbox.tsx  MessageContextMenu.tsx  MessageEditDialog.tsx  NarrativeText.tsx  PlusPanel.tsx  SafeInput.tsx  SafeTextarea.tsx  SettingRow.tsx  SoloModeBanner.tsx  StickerImage.tsx  StickerPanel.tsx  TimeControlBar.tsx  TourOverlay.tsx  VoiceBar.tsx  tours.ts
src/db/: builtinPresets.ts  defaults.ts  index.ts  init.ts
src/layouts/: MainLayout.tsx  SubPageLayout.tsx
src/pages/: AssetLibraryPage.tsx  CharacterDetailPage.tsx  CharacterEditPage.tsx  ChatPage.tsx  ChatsPage.tsx  ContactsPage.tsx  DebugPromptsPage.tsx  DiscoverPage.tsx  GroupChatView.tsx  GroupCreatePage.tsx  LorebookDetailPage.tsx  LorebooksPage.tsx  MePage.tsx  MomentsPage.tsx  NpcGeneratePage.tsx  PresetEditPage.tsx  PresetsPage.tsx  SceneModePage.tsx  SettingsPage.tsx  SoloTimePage.tsx  TickLogPage.tsx  VoiceCallPage.tsx
src/services/: aiGroupService.ts  (+31 more)
(+23 files in other folders)
